--- a/public/422.html
+++ b/public/422.html
@@ -2,4 +2,6 @@
 <html>
 <head>
   <title>The change you wanted was rejected (422)</title>
-  <meta name="vie
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  .rails-default-error-pag
