--- a/public/422.html
+++ b/public/422.html
@@ -8,4 +8,8 @@
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
-    font-family: ar
+    font-family: arial, sans-serif;
+    margin: 0;
+  }
+
+  .rails-default-error-page div.d
