Fix typo in README.

--- a/public/422.html
+++ b/public/422.html
@@ -12,4 +12,10 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.d
+  .rails-default-error-page div.dialog {
+    width: 95%;
+    max-width: 33em;
+    margin: 4em auto 0;
+  }
+
+  .rails-defaul
