--- a/public/422.html
+++ b/public/422.html
@@ -18,4 +18,6 @@
     margin: 4em auto 0;
   }
 
-  .rails-defaul
+  .rails-default-error-page div.dialog > div {
+    border: 1px solid #CCC;
+    border-right-co
