--- a/public/422.html
+++ b/public/422.html
@@ -20,4 +20,6 @@
 
   .rails-default-error-page div.dialog > div {
     border: 1px solid #CCC;
-    border-right-co
+    border-right-color: #999;
+    border-left-color: #999;
+    border-bottom-color: #BBB
