--- a/public/422.html
+++ b/public/422.html
@@ -22,4 +22,7 @@
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
-    border-bottom-color: #BBB
+    border-bottom-color: #BBB;
+    border-top: #B00100 solid 4px;
+    border-top-left-radius: 9px;
+    bord
