--- a/public/422.html
+++ b/public/422.html
@@ -25,4 +25,7 @@
     border-bottom-color: #BBB;
     border-top: #B00100 solid 4px;
     border-top-left-radius: 9px;
-    bord
+    border-top-right-radius: 9px;
+    background-color: white;
+    padding: 7px 12% 0;
+   
