--- a/public/422.html
+++ b/public/422.html
@@ -28,4 +28,8 @@
     border-top-right-radius: 9px;
     background-color: white;
     padding: 7px 12% 0;
-   
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+
+  .rails-default-error-page h1 {
+ 
