--- a/public/422.html
+++ b/public/422.html
@@ -32,4 +32,9 @@
   }
 
   .rails-default-error-page h1 {
- 
+    font-size: 100%;
+    color: #730E15;
+    line-height: 1.5em;
+  }
+
+  .rails-default
