--- a/public/422.html
+++ b/public/422.html
@@ -37,4 +37,7 @@
     line-height: 1.5em;
   }
 
-  .rails-default
+  .rails-default-error-page div.dialog > p {
+    margin: 0 0 1em;
+    padding: 1em;
+    background-c
