Upload New File

--- a/public/422.html
+++ b/public/422.html
@@ -43,4 +43,6 @@
     background-color: #F7F7F7;
     border: 1px solid #CCC;
     border-right-color: #999;
-    border-left-colo
+    border-left-color: #999;
+    border-bottom-color: #999;
+    border-bottom-left-radius: 4px;
