--- a/public/422.html
+++ b/public/422.html
@@ -56,3 +56,6 @@
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/422.html -->
+  <div class="dialog">
+    <div>
+      <h1>The change you wanted was rejected.</h1
