--- a/public/422.html
+++ b/public/422.html
@@ -60,4 +60,6 @@
     <div>
       <h1>The change you wanted was rejected.</h1>
       <p>Maybe you tried to change something you didn't have access to.</p>
-    </d
+    </div>
+    <p>If you are the application owner check the logs for more information.</p>
+  </di
