--- a/public/422.html
+++ b/public/422.html
@@ -62,4 +62,6 @@
       <p>Maybe you tried to change something you didn't have access to.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
-  </di
+  </div>
+</body>
+</html>
