Add missing copyright header

--- a/public/500.html
+++ b/public/500.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something wen
+  <title>We're sorry, but something went wrong (500)</title>
+  <meta name="viewport" content="width=device-width,initial-s
