--- a/public/500.html
+++ b/public/500.html
@@ -2,4 +2,8 @@
 <html>
 <head>
   <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-s
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  .rails-default-error-page {
+    background-color: #EFEFEF;
+   
