--- a/public/500.html
+++ b/public/500.html
@@ -6,4 +6,7 @@
   <style>
   .rails-default-error-page {
     background-color: #EFEFEF;
-   
+    color: #2E2F30;
+    text-align: center;
+    font-family: arial, sans-serif;
+    margin:
