--- a/public/500.html
+++ b/public/500.html
@@ -9,4 +9,10 @@
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
-    margin:
+    margin: 0;
+  }
+
+  .rails-default-error-page div.dialog {
+    width: 95%;
+    max-width: 33em;
+    
