--- a/public/500.html
+++ b/public/500.html
@@ -15,4 +15,8 @@
   .rails-default-error-page div.dialog {
     width: 95%;
     max-width: 33em;
-    
+    margin: 4em auto 0;
+  }
+
+  .rails-default-error-page div.dialog > div {
+    borde
