[-feature]Committing latest translations from Pootle

--- a/public/500.html
+++ b/public/500.html
@@ -19,4 +19,7 @@
   }
 
   .rails-default-error-page div.dialog > div {
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
     borde
