--- a/public/500.html
+++ b/public/500.html
@@ -29,4 +29,8 @@
     background-color: white;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
- 
+  }
+
+  .rails-default-error-page h1 {
+    font-size: 100%;
+    color: #73
