--- a/public/500.html
+++ b/public/500.html
@@ -33,4 +33,8 @@
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #73
+    color: #730E15;
+    line-height: 1.5em;
+  }
+
+  .rails-default-error-page div.dialog > p 
