--- a/public/500.html
+++ b/public/500.html
@@ -37,4 +37,8 @@
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p 
+  .rails-default-error-page div.dialog > p {
+    margin: 0 0 1em;
+    padding: 1em;
+    background-color: #F7F7F7;
+ 
