--- a/public/500.html
+++ b/public/500.html
@@ -41,4 +41,7 @@
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
- 
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
+    
