--- a/public/500.html
+++ b/public/500.html
@@ -46,4 +46,7 @@
     border-left-color: #999;
     border-bottom-color: #999;
     border-bottom-left-radius: 4px;
-    border-bottom-right-radius:
+    border-bottom-right-radius: 4px;
+    border-top-color: #DADADA;
+    color: #666;
+    box-shadow:
