Back to development: 0.2

--- a/public/500.html
+++ b/public/500.html
@@ -54,4 +54,6 @@
   </style>
 </head>
 
-<body class="rails
+<body class="rails-default-error-page">
+  <!-- This file lives in public/500.html -->
+  <div class="dialog"
