--- a/public/500.html
+++ b/public/500.html
@@ -60,4 +60,5 @@
     <div>
       <h1>We're sorry, but something went wrong.</h1>
     </div>
-    <p>If 
+    <p>If you are the application owner check the logs for more information.</p>
+  </
